Implement Gif with Giphy Sdk

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyEmojiKeyboardLikeWhatsApp</string>
+    <string name="giphyAPIKey"></string>
 </resources>
