--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">MyEmojiKeyboardLikeWhatsApp</string>
-    <string name="giphyAPIKey"></string>
+    <string name="giphyAPIKey">cehu6ieap3WlRix8D3fGox2xyRPZ8Sgn</string>
 </resources>
